--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "require": {
         "php": ">=5.5.9",
         "ext-intl": "*",
-        "mathiasverraes/money": "~1.2",
-        "draperstudio/payload": "~1.0"
+        "mathiasverraes/money": "^1.2",
+        "draperstudio/payload": "^1.0"
     },
     "autoload": {
         "psr-4": {
