--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^5.5.9 || ^7.0",
+        "php": "^5.6 || ^7.0",
         "ext-intl": "*",
         "mathiasverraes/money": "^1.2",
         "draperstudio/payload": "^0.1"
@@ -23,7 +23,7 @@
     "require-dev": {
         "graham-campbell/testbench": "^3.1",
         "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^4.8 || ^5.0",
+        "phpunit/phpunit": "^5.0",
         "scrutinizer/ocular": "~1.1",
         "squizlabs/php_codesniffer": "~2.3"
     },
